R600: Don't try to fix reg class when copying IMPLICIT_DEF to a register

The test case for this is way too complex to be useful as a lit test,
and I was unable to reduce it.

https://bugs.freedesktop.org/show_bug.cgi?id=65438

llvm-svn: 183937